crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.1.normal/output.js
var A1;
(function(A) {
    var B1;
    (function(B) {
        class C {
        }
        B.C = C;
    })(B1 || (B1 = {
    }));
    A.B = B1;
})(A1 || (A1 = {
}));
var M21;
(function(M2) {
    var X1;
    (function(X) {
        var Point;
        X.Point = Point;
    })(X1 || (X1 = {
    }));
    M2.X = X1;
})(M21 || (M21 = {
}));
